// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`product-menu Basic renders as expected 1`] = `
<div
  className="flex-parent"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <a
    className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
    href="/dr-ui/"
  >
    Mapbox product menu
  </a>
</div>
`;

exports[`product-menu Beta product renders as expected 1`] = `
<div
  className="flex-parent"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <a
    className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
    href="/vision/"
  >
    Vision SDK for Android
  </a>
  <span
    className="flex-child flex-child--no-shrink mx6"
  >
    <div
      className="inline-block"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby="tooltip-1"
        className="txt-s txt-bold round px6 inline-block cursor-default border"
        style={
          Object {
            "background": "#f1f3fd",
            "borderColor": "#0428c8",
            "color": "#0c248d",
          }
        }
      >
        Beta
      </div>
      <div
        className="hide-visually"
        id="tooltip-1"
        role="tooltip"
      >
        <div
          className="txt-s wmax120"
        >
          This feature is in public beta and is subject to changes.
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`product-menu Beta product renders as expected 2`] = `
<div
  className="flex-parent"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <a
    className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
    href="/vision/"
  >
    Navigation SDK for Android
  </a>
  <span
    className="flex-child flex-child--no-shrink mx6"
  >
    <div
      className="inline-block"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
    >
      <div
        aria-describedby="tooltip-2"
        className="txt-s txt-bold round px6 inline-block cursor-default border"
        style={
          Object {
            "background": "#f1f3fd",
            "borderColor": "#0428c8",
            "color": "#0c248d",
          }
        }
      >
        Beta
      </div>
      <div
        className="hide-visually"
        id="tooltip-2"
        role="tooltip"
      >
        <div
          className="txt-s wmax120"
        >
          This feature is in public beta and is subject to changes.
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`product-menu Custom trigger style - display only renders as expected 1`] = `
<div
  className="bg-gray-dark py6"
>
  <div
    className="flex-parent"
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <a
      className="flex-child txt-fancy txt-l txt-truncate color-white color-gray-light-on-hover"
      href="/api-documentation/"
    >
      Light on dark
    </a>
  </div>
</div>
`;

exports[`product-menu Fake items, but one matches this test case's location renders as expected 1`] = `
<div
  className="flex-parent"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <a
    className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
    href="/api-documentation/"
  >
    Items in here
  </a>
</div>
`;

exports[`product-menu Product menu with something arbitrary in it renders as expected 1`] = `
<div
  className="flex-parent"
  style={
    Object {
      "overflow": "hidden",
    }
  }
>
  <a
    className="flex-child txt-fancy txt-l txt-truncate color-blue-on-hover"
    href="/api-documentation/"
  >
    Pizza pie
  </a>
</div>
`;
